fix app container margin on mobile

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -60,6 +60,11 @@ html {
 
 #app {
   min-height: 100vh;
+  height: 100%;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
   transition: all 0.5s;
   z-index: -2;
 }
